--- a/src/scss/partitions/_variables.scss
+++ b/src/scss/partitions/_variables.scss
@@ -1,7 +1,7 @@
 /* Цвета */
 
 // Панель главного меню
-$bg_color-navpanel:#bc6400;
+$bg_color-navpanel:#bc6400; //#333333;
 $color-item:#fff;
 $link-active:#f6f9ab;
 $link-color:#fff;
