Убрана фиксация размера панели главного меню

--- a/src/scss/header.scss
+++ b/src/scss/header.scss
@@ -16,7 +16,8 @@
         align-items: center;
         background-color: $bg_color-navpanel;
         height: 50px;
-        flex-wrap: wrap;
+        //width: 1170px;
+        //flex-wrap: wrap;
 
         .menu_items  {
 
