Изменены названия переменных цвета

--- a/src/scss/partitions/_variables.scss
+++ b/src/scss/partitions/_variables.scss
@@ -1,10 +1,10 @@
 /* Цвета */
 
 // Панель главного меню
-$bg_color-navpanel:#bc6400; //#333333;
+$color-background:#bc6400; //#333333;
 $color-item:#fff;
-$link-active:#f6f9ab;
-$link-color:#fff;
+$color-link-active:#f6f9ab;
+$color-link:#fff;
 
 
 
