--- a/src/scss/partitions/_variables.scss
+++ b/src/scss/partitions/_variables.scss
@@ -1,15 +1,19 @@
 /* Цвета */
 
 // Панель главного меню
-$color-background:#bc6400; //#333333;
+$color-base: #bc6400; //#095a3e; // #186a33;
 $color-item:#fff;
-$color-link-base:$color-background;
+$color-link-base: $color-base;
 $color-link-active:#f6f9ab;
 $color-link:#fff;
 
 // Форма авторизации
-$color-background-form:#ff9933;
-$color-border-input:#BC6400;
+$color-background-form: lighten($color-base,15%); //#ff9933;
+$color-border-input: $color-base;
+
+// Форма поиска
+$color-button:$color-border-input;
+$color-border-button:$color-item;
 
 
 
