--- a/src/scss/header.scss
+++ b/src/scss/header.scss
@@ -40,11 +40,27 @@
           background-color: $color-background-form;
           display: none;
 
+
           ul{
             list-style: none;
+            @include clear;
+            padding: 5px;
 
             li {
-              border: 1px solid $color-item;
+              padding-left: 10px;
+              border-bottom: 1px solid $color-item;
+              color: $color-item;
+              font-size: 16px;
+              background-color: lighten($color-base,5%);
+              text-transform: uppercase;
+              //cursor: pointer;
+
+              &.active{
+                span, i{
+                  color: $color-link-active;
+                }
+              }
+
               a{
                 //display: block;
                 //align-items: center;
@@ -52,6 +68,32 @@
                 height: 30px;
                 //width: 100%;
                 color: $color-item;
+                &:hover{
+                  color: $color-link-active;
+                }
+              }
+
+              ul{
+                li{
+                  border: none;
+                  border-bottom: 1px dotted $color-item;
+                  text-transform: none;
+
+                  &.active{
+                    a, span{
+                      color: $color-link-active;
+                    }
+
+                  }
+
+                  &:last-child{
+                    border-bottom:none;
+                  }
+                  a{
+                    display: block;
+                    width: 100%;
+                  }
+                }
               }
 
             }
@@ -78,6 +120,7 @@
               align-items: center;
               height: 40px;
               font-size: 18px;
+              //@include shadow_text;
               @include devices-max-width-1200px{
                 font-size: 16px;
               }
@@ -232,6 +275,7 @@
             margin-right: 15px;
             align-items: center;
             cursor: pointer;
+            @include shadow_text;
 
             &:hover{
               color: $color-link-active;
@@ -248,6 +292,7 @@
             border-left: 2px solid white;
             padding-left: 10px;
             cursor: pointer;
+            @include shadow_text;
 
             &:hover{
               color: $color-link-active;
@@ -496,6 +541,10 @@
       }
 
 
+  }
+
+  .wrapper_logo{
+    margin-top: 50px;
   }
 
 }
