--- a/src/scss/header.scss
+++ b/src/scss/header.scss
@@ -545,6 +545,27 @@
 
   .wrapper_logo{
     margin-top: 50px;
+
+    .logo_img{
+      width: 300px;
+      height: 150px;
+      padding: 10px;
+
+      img {
+        width: 100%;
+        height: 100%;
+      }
+    }
+
+    .banner_header{
+      padding: 10px;
+      width: 468px;
+      height: 60px;
+      border: 1px solid $color-base;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
   }
 
 }
