--- a/src/scss/partitions/_variables.scss
+++ b/src/scss/partitions/_variables.scss
@@ -1,9 +1,11 @@
 /* Цвета */
 
 $color-grey:#282c2d;
+$color-base: $color-grey; //#bc6400; //#095a3e; // #186a33;
+$color-background:#fff3cd;
 
 // Панель главного меню
-$color-base: $color-grey; //#bc6400; //#095a3e; // #186a33;
+
 $color-item:#fff;
 $color-link-base: $color-base;
 $color-link-active:#f6f9ab;
