Настроено предварительное отображение текстового логотипа и слогана сайта

--- a/src/scss/partitions/_variables.scss
+++ b/src/scss/partitions/_variables.scss
@@ -1,7 +1,7 @@
 /* Цвета */
 
 $color-grey:#282c2d;
-$color-base: $color-grey; //#bc6400; //#095a3e; // #186a33;
+$color-base: #bc6400;//$color-grey; //#bc6400; //#095a3e; // #186a33;
 $color-background:#fff3cd;
 
 // Панель главного меню
@@ -26,6 +26,7 @@ $font-family: "Roboto","Arial","Times New Roman", sans-serif;
 $font-roboto-regular:"Roboto Regular";
 $font-size: 14px;
 $font-weight: normal;
+$font-logo:"BrushScriptMTCursive", "Roboto";
 
 
 //Междубуквенный интервал
