--- a/src/scss/header.scss
+++ b/src/scss/header.scss
@@ -547,14 +547,32 @@
     margin-top: 50px;
 
     .logo_img{
-      width: 300px;
-      height: 150px;
+      width: 250px;
+      height: 125px;
       padding: 10px;
 
       img {
         width: 100%;
         height: 100%;
       }
+    }
+
+    .logo_title{
+      font-family: $font-logo;
+      font-size: 70px;
+      text-align: left;
+      color: $color-item;
+      //@include shadow_text;
+      text-shadow: $color-base 1px 1px 0, $color-base -1px -1px 0,
+      $color-base -1px 1px 0, $color-base 1px -1px 0;
+    }
+
+    .logo_slogan{
+      text-transform: uppercase;
+      font-size: 20px;
+      color: $color-base;
+      text-align: center;
+      font-style: italic;
     }
 
     .banner_header{
