Изменён базовый цвет на серый

--- a/src/scss/partitions/_variables.scss
+++ b/src/scss/partitions/_variables.scss
@@ -1,7 +1,7 @@
 /* Цвета */
 
 $color-grey:#282c2d;
-$color-base: #bc6400;//$color-grey; //#bc6400; //#095a3e; // #186a33;
+$color-base: $color-grey; //#bc6400; //#095a3e; // #186a33;
 $color-background:#fff3cd;
 
 // Панель главного меню
