Настроена адаптация хэдера

--- a/src/scss/partitions/_variables.scss
+++ b/src/scss/partitions/_variables.scss
@@ -27,6 +27,7 @@ $font-roboto-regular:"Roboto Regular";
 $font-size-base: 14px;
 $font-weight: normal;
 $font-logo:"BrushScriptMTCursive", "Roboto";
+$font-slogan:"Segoe Print","Roboto";
 
 
 //Междубуквенный интервал
