--- a/src/scss/header.scss
+++ b/src/scss/header.scss
@@ -544,46 +544,111 @@
   }
 
   .wrapper_logo{
+    @include flex-center;
     margin-top: 50px;
+    background-color: lighten($color-grey,5);
+    min-height: 150px;
 
-    .logo_img{
-      width: 250px;
-      height: 125px;
-      padding: 10px;
+    .wrapper_img{
+      width: 100%;
+      @include flex-center;
 
-      img {
-        width: 100%;
-        height: 100%;
+      @include devices-max-width-992px{
+        justify-content: flex-end;
+      }
+
+      @include devices-max-width-768px{
+        justify-content: center;
+      }
+
+      .logo_img{
+        width: 200px;
+        @include devices-max-width-1200px{
+          width: 180px;
+        }
+        @include devices-max-width-768px{
+          margin-top: 10px;
+        }
+
+        img {
+          width: 100%;
+          height: 100%;
+        }
       }
     }
 
     .logo_title{
+      height: 70px;
+      display: flex;
+      justify-content: flex-end;
+      align-items: center;
       font-family: $font-logo;
-      font-size: 70px;
+      font-size: 60px;
       text-align: left;
       color: $color-item;
       //@include shadow_text;
       text-shadow: $color-base 1px 1px 0, $color-base -1px -1px 0,
       $color-base -1px 1px 0, $color-base 1px -1px 0;
+
+      @include devices-max-width-1200px{
+        font-size: 50px;
+      }
+
+      @include devices-max-width-992px{
+        justify-content: flex-start;
+      }
+
+      @include devices-max-width-768px{
+        justify-content: center;
+      }
     }
 
     .logo_slogan{
+      @include flex-center;
+      justify-content: flex-end;
       text-transform: uppercase;
       font-size: 20px;
       color: $color-base;
-      text-align: center;
       font-style: italic;
+      font-family: $font-slogan;
+      font-size: 24px;
+      font-weight: bold;
+      @include shadow_text;
+
+      @include devices-max-width-1200px{
+        font-size: 20px;
+      }
+
+      @include devices-max-width-992px{
+        justify-content: flex-start;
+        font-size: 18px;
+      }
+
+      @include devices-max-width-768px{
+        justify-content: center;
+      }
     }
 
-    .banner_header{
-      padding: 10px;
-      width: 468px;
-      height: 60px;
-      border: 1px solid $color-base;
+    .baner_wraper{
+      width: 100%;
       display: flex;
-      justify-content: center;
+      justify-content: flex-end;
       align-items: center;
+
+      @include devices-max-width-992px{
+        justify-content: center;
+        margin-top: 10px;
+        margin-bottom: 10px;
+      }
+
+      .banner_header{
+        padding: 10px;
+        width: 468px;
+        height: 60px;
+        border: 1px solid $color-base;
+      }
     }
+
   }
 
 }
