--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -3,9 +3,9 @@
 @import "partitions/media";
 
 body{
-  font-family: $font-family;
-  font-size: $font-size;
-  background-color: $color-background;
+  font-family: $font-family-base;
+  font-size: $font-size-base;
+  background-color: $color-background-base;
 }
 
 a{
