--- a/src/scss/header.scss
+++ b/src/scss/header.scss
@@ -500,6 +500,11 @@
             display: none;
             @include shadow_block;
 
+            @include devices-max-width-480px{
+              width: 300px;
+              height: 100px;
+            }
+
             form{
               display: flex;
               position: relative;
@@ -507,6 +512,10 @@
               .icon_search{
                 margin-top: 5px;
                 width: 70px;
+
+                @include devices-max-width-480px{
+                  width: 60px;
+                }
 
                 img{
                   width: 100%;
@@ -517,6 +526,15 @@
                 position: absolute;
                 top: 55px;
                 left: 80px;
+                img{
+                  width: 150px;
+
+                  @include devices-max-width-480px{
+                    width: 100px;
+                  }
+                }
+
+
               }
 
               .field_search{
@@ -526,6 +544,12 @@
                 align-items: flex-end;
                 width: 260px;
                 //align-self: flex-end;
+
+                @include devices-max-width-480px{
+                  position: absolute;
+                  left: 30px;
+                  //width: 200px;
+                }
 
                 input{
                   font-style: italic;
@@ -538,6 +562,10 @@
                   margin-bottom: 15px;
                   margin-top: 15px;
                   @include shadow_block;
+
+                  @include devices-max-width-480px{
+                    width: 210px;
+                  }
                 }
 
                 button{
