--- a/src/scss/partitions/_variables.scss
+++ b/src/scss/partitions/_variables.scss
@@ -1,8 +1,9 @@
 /* Цвета */
 
 $color-grey:#282c2d;
-$color-base: #095a3e; //$color-grey; //#bc6400; //#095a3e; // #186a33;
+$color-base: #bc6400;//#095a3e; //$color-grey; //#bc6400; //#095a3e; // #186a33;
 $color-background-base:#fff3cd;
+$color-background-content:#fff;
 
 // Панель главного меню
 
