--- a/src/scss/mod_news.scss
+++ b/src/scss/mod_news.scss
@@ -158,32 +158,61 @@
 
     .new{
       display: flex;
-      min-height: 50px;
       align-items: center;
       justify-content: flex-start;
       border-bottom: 1px dotted $color-grey;
+      min-height: 50px;
 
       .datatime{
-        align-self: center;
-        font-size: 18px;
+        font-size: 16px;
         margin-right: 20px;
-        height: 20px;
+        //height: 20px;
       }
       h3{
         @include clear;
-        min-height: 20px;
         font-size: 14px;
         display: flex;
         align-items: center;
 
         a{
-          display: block;
+          @include clear;
+          display: flex;
+          align-items: center;
           width: 100%;
-          height: 100%;
           color: $color-grey;
+
+          &:hover{
+            color:$color-base;
+          }
         }
       }
     }
   }
+
+  .wrap_link_allnews{
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 20px;
+
+    a{
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      color: $color-grey;
+
+      &:hover{
+        text-decoration: none;
+        color:$color-base;
+      }
+
+      i{
+        margin-right: 10px;
+      }
+    }
+
+  }
+
 }
 
