Выполнена предварительная адаптация блока новостей

--- a/src/scss/partitions/_variables.scss
+++ b/src/scss/partitions/_variables.scss
@@ -1,7 +1,8 @@
 /* Цвета */
 
 $color-grey:#282c2d;
-$color-base: #bc6400;//#095a3e; //$color-grey; //#bc6400; //#095a3e; // #186a33;
+$color-grey-light:#e5e5e5;
+$color-base: #095a3e; //$color-grey; //#bc6400; //#095a3e; // #186a33;
 $color-background-base:#fff3cd;
 $color-background-content:#fff;
 
