--- a/src/scss/mod_news.scss
+++ b/src/scss/mod_news.scss
@@ -20,27 +20,36 @@
     width: 100%;
     //border: 1px solid grey;
     position: relative;
-    //padding: 2px;
-    //margin: 10px;
+
+    @include devices-max-width-480px{
+      margin-bottom: 40px;
+    }
+
+    &:hover{
+      img{
+        opacity: 1;
+      }
+    }
 
     img {
       //width: 528px;
       //height: 330px;
       width: 100%;
       height: 100%;
+      opacity: .95;
     }
 
     .title_wrap{
       @include clear;
       width: 100%;
       height: 70px;
-      //position: absolute;
-      //top: 260px;
       display: flex;
       justify-content: flex-start;
-      //align-items: center;
       color: $color-item;
-      //background-color: black;
+
+      @include devices-max-width-480px{
+        flex-direction: column;
+      }
 
       .data{
         @include clear;
@@ -54,11 +63,26 @@
         background-color: $color-base;
         z-index: 100;
 
+        @include devices-max-width-480px{
+          flex-direction: row;
+          //justify-content: center;
+          //align-items: center;
+          min-height: 30px;
+          width: 100%;
+        }
+
         .day{
           z-index: 101;
           font-size: 22px;
           color: $color-link-active;
           height: 25px;
+
+          @include devices-max-width-480px{
+            height: 20px;
+            font-size: 16px;
+            align-self: center;
+            margin-right: 5px;
+          }
         }
         .month{
           z-index: 101;
@@ -66,11 +90,23 @@
           color: $color-item;
           font-size: 16px;
           text-transform: lowercase;
+
+          @include devices-max-width-480px{
+            font-size: 16px;
+            align-self: center;
+            margin-right: 5px;
+          }
         }
         .year{
           z-index: 101;
           color: $color-link-active;
           font-size: 14px;
+
+          @include devices-max-width-480px{
+            height: 20px;
+            font-size: 16px;
+            align-self: center;
+          }
         }
       }
 
@@ -86,6 +122,12 @@
         overflow: hidden;
         //opacity: .5;
 
+        @include devices-max-width-480px{
+          margin-left: 0px;
+          min-height: 70px;
+        }
+
+
         a{
           color: $color-link;
           display: block;
@@ -96,10 +138,19 @@
           }
           h3{
             width: 100%;
+            height: 100%;
             z-index: 105;
             @include clear;
             font-size: 18px;
             //opacity: 1;
+
+            @include devices-max-width-768px{
+              font-size: 16px;
+            }
+
+            @include devices-max-width-480px{
+              font-size: 14px;
+            }
           }
         }
 
@@ -111,6 +162,10 @@
       padding: 5px;
       padding-top: 10px;
 
+      @include devices-max-width-480px{
+        display: none;
+      }
+
       p{
         font-size: 14px;
       }
@@ -118,43 +173,70 @@
 
   }
 
-  .wrap_new{
-    width: 100%;
-    height: 400px;
+  .wrap_block_news{
     display: flex;
-    flex-direction: column;
-    //border: 1px solid $color-grey;
-    overflow: hidden;
-    border-bottom: 3px solid $color-base;
-    margin-bottom: 20px;
+    align-items: stretch;
+    justify-content: space-between;
 
-    img{
+    @media only screen and (max-width: 600px) {
+      flex-direction: column;
+    }
+
+    @include devices-max-width-480px{
+      flex-direction: column;
+    }
+
+
+    .wrap_new{
       width: 100%;
-      height: 160px;
-    }
+      //height: 300px;
+      height: 100%;
+      display: flex;
+      flex-direction: column;
+      //border: 1px solid $color-grey;
+      overflow: hidden;
+      border-bottom: 3px solid $color-grey-light;
+      margin-bottom: 20px;
 
-    .data{
-      color: $color-base;
-      padding: 5px;
-      text-transform: lowercase;
-    }
-    .title_new{
-      padding: 5px;
-      h3{
-        font-size: 18px;
-        font-family: RobotoRegular;
+      &:hover{
+        border-bottom: 3px solid $color-base;
 
-        a{
-          color: $color-grey;
-          &:hover{
-            color: $color-base;
+        img{
+          width: 100%;
+          opacity: 1;
+        }
+      }
+
+      img{
+        width: 100%;
+        height: 180px;
+        opacity: .9;
+      }
+
+      .data{
+        color: $color-base;
+        padding: 5px;
+        text-transform: lowercase;
+      }
+      .title_new{
+        padding: 5px;
+        h3{
+          font-size: 16px;
+          font-family: RobotoRegular;
+
+          a{
+            color: $color-grey;
+            &:hover{
+              color: $color-base;
+            }
           }
         }
       }
     }
   }
 
-  .block_news{
+
+  .link_news{
 
     .new{
       display: flex;
@@ -162,6 +244,8 @@
       justify-content: flex-start;
       border-bottom: 1px dotted $color-grey;
       min-height: 50px;
+      padding-top: 5px;
+      padding-bottom: 5px;
 
       .datatime{
         font-size: 16px;
