--- a/src/scss/mod_news.scss
+++ b/src/scss/mod_news.scss
@@ -21,12 +21,12 @@
     //border: 1px solid grey;
     position: relative;
 
-    @include devices-max-width-480px{
+    @include devices-max-width-480px {
       margin-bottom: 40px;
     }
 
-    &:hover{
-      img{
+    &:hover {
+      img {
         opacity: 1;
       }
     }
@@ -39,7 +39,7 @@
       opacity: .95;
     }
 
-    .title_wrap{
+    .title_wrap {
       @include clear;
       width: 100%;
       height: 70px;
@@ -47,11 +47,11 @@
       justify-content: flex-start;
       color: $color-item;
 
-      @include devices-max-width-480px{
+      @include devices-max-width-480px {
         flex-direction: column;
       }
 
-      .data{
+      .data {
         @include clear;
         margin-right: 20px;
         padding: 5px;
@@ -63,7 +63,7 @@
         background-color: $color-base;
         z-index: 100;
 
-        @include devices-max-width-480px{
+        @include devices-max-width-480px {
           flex-direction: row;
           //justify-content: center;
           //align-items: center;
@@ -71,38 +71,38 @@
           width: 100%;
         }
 
-        .day{
+        .day {
           z-index: 101;
           font-size: 22px;
           color: $color-link-active;
           height: 25px;
 
-          @include devices-max-width-480px{
+          @include devices-max-width-480px {
             height: 20px;
             font-size: 16px;
             align-self: center;
             margin-right: 5px;
           }
         }
-        .month{
+        .month {
           z-index: 101;
           height: 20px;
           color: $color-item;
           font-size: 16px;
           text-transform: lowercase;
 
-          @include devices-max-width-480px{
+          @include devices-max-width-480px {
             font-size: 16px;
             align-self: center;
             margin-right: 5px;
           }
         }
-        .year{
+        .year {
           z-index: 101;
           color: $color-link-active;
           font-size: 14px;
 
-          @include devices-max-width-480px{
+          @include devices-max-width-480px {
             height: 20px;
             font-size: 16px;
             align-self: center;
@@ -110,33 +110,32 @@
         }
       }
 
-      .title_new{
+      .title_new {
         display: flex;
         justify-content: flex-start;
         align-items: center;
         width: 100%;
         height: 70px;
         margin-left: -20px;
-        background-color: lighten($color-grey,5);
+        background-color: lighten($color-grey, 5);
         padding: 10px;
         overflow: hidden;
         //opacity: .5;
 
-        @include devices-max-width-480px{
+        @include devices-max-width-480px {
           margin-left: 0px;
           min-height: 70px;
         }
 
-
-        a{
+        a {
           color: $color-link;
           display: block;
           width: 100%;
           height: 100%;
-          &:hover{
+          &:hover {
             color: $color-link-active;
           }
-          h3{
+          h3 {
             width: 100%;
             height: 100%;
             z-index: 105;
@@ -144,36 +143,35 @@
             font-size: 18px;
             //opacity: 1;
 
-            @include devices-max-width-768px{
+            @include devices-max-width-768px {
               font-size: 16px;
             }
 
-            @include devices-max-width-480px{
+            @include devices-max-width-480px {
               font-size: 14px;
             }
           }
         }
 
-
       }
     }
 
-    .intro_new{
+    .intro_new {
       padding: 5px;
       padding-top: 10px;
 
-      @include devices-max-width-480px{
+      @include devices-max-width-480px {
         display: none;
       }
 
-      p{
+      p {
         font-size: 14px;
       }
     }
 
   }
 
-  .wrap_block_news{
+  .wrap_block_news {
     display: flex;
     align-items: stretch;
     justify-content: space-between;
@@ -182,12 +180,11 @@
       flex-direction: column;
     }
 
-    @include devices-max-width-480px{
+    @include devices-max-width-480px {
       flex-direction: column;
     }
 
-
-    .wrap_new{
+    .wrap_new {
       width: 100%;
       //height: 300px;
       height: 100%;
@@ -198,35 +195,59 @@
       border-bottom: 3px solid $color-grey-light;
       margin-bottom: 20px;
 
-      &:hover{
+      &:hover {
         border-bottom: 3px solid $color-base;
 
-        img{
+        img {
           width: 100%;
           opacity: 1;
         }
       }
 
-      img{
+      img {
         width: 100%;
         height: 180px;
         opacity: .9;
+
+       @include devices-min-width-320px{
+         height: 180px;
+       }
+
+        @include devices-min-width-480px{
+          height: 268px;
+        }
+
+        @media only screen and (min-width: 600px) {
+          height: 180px;
+        }
+
+        @include devices-min-width-768px{
+          height: 240px;
+        }
+
+        @media only screen and (min-width: 800px) {
+          height: 240px;
+        }
+
+        @include devices-min-width-992px{
+          height: 180px;
+        }
       }
 
-      .data{
+      .data {
         color: $color-base;
         padding: 5px;
         text-transform: lowercase;
       }
-      .title_new{
+      .title_new {
         padding: 5px;
-        h3{
+        h3 {
           font-size: 16px;
           font-family: RobotoRegular;
 
-          a{
+          a {
             color: $color-grey;
-            &:hover{
+            &:hover {
               color: $color-base;
             }
           }
@@ -235,10 +256,9 @@
     }
   }
 
+  .link_news {
 
-  .link_news{
-
-    .new{
+    .new {
       display: flex;
       align-items: center;
       justify-content: flex-start;
@@ -247,51 +267,51 @@
       padding-top: 5px;
       padding-bottom: 5px;
 
-      .datatime{
+      .datatime {
         font-size: 16px;
         margin-right: 20px;
         //height: 20px;
       }
-      h3{
+      h3 {
         @include clear;
         font-size: 14px;
         display: flex;
         align-items: center;
 
-        a{
+        a {
           @include clear;
           display: flex;
           align-items: center;
           width: 100%;
           color: $color-grey;
 
-          &:hover{
-            color:$color-base;
+          &:hover {
+            color: $color-base;
           }
         }
       }
     }
   }
 
-  .wrap_link_allnews{
+  .wrap_link_allnews {
     width: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
     margin-top: 20px;
 
-    a{
+    a {
       display: flex;
       justify-content: center;
       align-items: center;
       color: $color-grey;
 
-      &:hover{
+      &:hover {
         text-decoration: none;
-        color:$color-base;
+        color: $color-base;
       }
 
-      i{
+      i {
         margin-right: 10px;
       }
     }
