--- a/src/scss/mod_slider_top.scss
+++ b/src/scss/mod_slider_top.scss
@@ -3,5 +3,53 @@
 @import "partitions/media";
 
 #mod_slider_top{
+  //margin: 20px;
+  //margin-left: 50px;
+  //margin-right: 50px;
+  margin-top: 20px;
+  margin-bottom: 20px;
+  padding: 5px;
+  //border: 1px solid $color-grey;
+  position: relative;
+
+  //.owl-carousel{
+  //  //padding-left: 25px;
+  //
+  //  .item{
+  //    @include clear;
+  //    a{
+  //      img{
+  //        width: 220px;
+  //        height: 150px;
+  //      }
+  //    }
+  //  }
+  //}
+
+  //.owl-controls{
+  //  //z-index: 100;
+  //  position: absolute;
+  //  top: 35%;
+  //  width: 100%;
+  //
+  //  .owl-nav{
+  //    position: relative;
+  //
+  //    width: 100%;
+  //
+  //    .owl-prev{
+  //      position: absolute;
+  //      left: 0;
+  //      z-index: 100;
+  //    }
+  //    .owl-next{
+  //      position: absolute;
+  //      right: 0px;
+  //      z-index: 100;
+  //    }
+  //  }
+  //
+  //
+  //}
 
 }
