--- a/src/scss/partitions/_media.scss
+++ b/src/scss/partitions/_media.scss
@@ -18,6 +18,12 @@
   }
 }
 
+@mixin devices-max-width-600px(){
+  @media only screen and (max-width: 600px) {
+    @content;
+  }
+}
+
 @mixin devices-max-width-480px(){
   @media only screen and (max-width: 480px) {
     @content;
@@ -40,6 +46,12 @@
 
 @mixin devices-min-width-480px(){
   @media only screen and (min-width: 480px) {
+    @content;
+  }
+}
+
+@mixin devices-min-width-600px(){
+  @media only screen and (min-width: 600px) {
     @content;
   }
 }
