--- a/src/scss/mod_slider_top.scss
+++ b/src/scss/mod_slider_top.scss
@@ -14,6 +14,26 @@
     width: 100%;
     bottom: 130px;
 
+    @include devices-min-width-480px{
+      bottom: 160px;
+    }
+
+    @include devices-min-width-600px{
+      bottom: 120px;
+    }
+
+    @include devices-min-width-768px{
+      bottom: 150px;
+    }
+
+    @media only screen and (min-width: 800px) {
+      bottom: 110px;
+    }
+
+    @include devices-min-width-992px{
+      bottom: 130px;
+    }
+
     .owl-prev {
       position: absolute;
       left: 0;
