--- a/src/scss/mod_slider_top.scss
+++ b/src/scss/mod_slider_top.scss
@@ -8,6 +8,7 @@
   margin-bottom: 20px;
   padding: 5px;
   position: relative;
+  border-bottom: 2px solid $color-grey-light;
 
   .owl-nav {
     position: relative;
