--- a/src/scss/mod_puppies.scss
+++ b/src/scss/mod_puppies.scss
@@ -115,4 +115,144 @@
 
   }
 
+  .block_cards{
+
+    .card{
+      margin: 10px;
+      border: none;
+      //cursor: pointer;
+
+      &:hover{
+        .hide_block{
+          display: flex;
+          z-index: 1000;
+        }
+      }
+
+      .meta_info{
+        display: flex;
+        justify-content: space-between;
+        width: 100%;
+        //padding: 5px;
+
+        .top{
+          width: 60%;
+          display: flex;
+          align-items: center;
+          justify-content: center;
+
+          i{
+            color: $color-base;
+            margin-right: 5px;
+          }
+          span{
+            text-transform: uppercase;
+            font-size: 20px;
+            color: $color-base;
+            font-weight: bold;
+          }
+        }
+
+        .price{
+          background-color: $color-base;
+          width: 40%;
+          text-align: center;
+          border-top-right-radius: .3em;
+          border-top-left-radius: .3em;
+          font-size: 20px;
+          color: $color-link-active;
+        }
+      }
+
+      .content_card{
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+
+        &:hover{
+          border: 2px solid $color-base;
+        }
+
+        img{
+          width: 100%;
+        }
+
+        .breed{
+          margin-top: 10px;
+          color: $color-base;
+          font-size: 18px;
+          min-height: 70px;
+          max-height: 100px;
+          overflow: hidden;
+        }
+
+        .fields{
+          display: flex;
+          margin-left: 30px;
+          flex-direction: column;
+
+          div{
+            display: flex;
+            align-items: flex-start;
+            margin-bottom: 5px;
+            i{
+              margin-right: 10px;
+              font-size: 20px;
+              color: $color-base;
+            }
+          }
+        }
+
+        .hide_block{
+          padding: 10px;
+          display: flex;
+          flex-direction: column;
+          align-items: center;
+          justify-content: center;
+          transition: all .5s;
+
+          .text{
+            max-height: 200px;
+            overflow: hidden;
+          }
+
+          .link_more{
+            width: 60%;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            margin-top: 10px;
+            height: 30px;
+            background-color: $color-base;
+            border-radius: .3em;
+
+            a{
+              display: flex;
+              justify-content: space-around;
+              align-items: center;
+              width: 100%;
+              height: 100%;
+              color: $color-item;
+
+              &:hover{
+                text-decoration: none;
+                color: $color-link-active;
+                @include shadow_block;
+
+              }
+
+              i{
+                font-size: 18px;
+              }
+            }
+
+          }
+        }
+      }
+
+    }
+  }
+
 }
