--- a/src/scss/mod_puppies.scss
+++ b/src/scss/mod_puppies.scss
@@ -69,19 +69,19 @@
       }
     }
 
-    form{
+    form {
       min-height: 40px;
 
-      .form-row{
+      .form-row {
         display: flex;
         align-items: center;
 
-        .form-group{
+        .form-group {
           @include clear;
           padding: 5px;
-          
-          select{
-            background-color:$color-background-base;
+
+          select {
+            background-color: $color-background-base;
             border: 2px solid $color-background-base;
             border-radius: .3em;
           }
@@ -96,12 +96,12 @@
           //min-width: 70px;
           align-self: center;
 
-          i, span{
+          i, span {
             color: $color-background-base;
-            font-size:18px;
+            font-size: 18px;
           }
 
-          span{
+          span {
             text-transform: uppercase;
           }
 
@@ -110,42 +110,32 @@
       }
     }
 
-
-
-
   }
 
-  .block_cards{
+  .block_cards {
 
-    .card{
-      margin: 10px;
-      border: none;
-      //cursor: pointer;
+    .wrap_card {
+      padding: 10px;
+      width: 100%;
+      height: 450px;
+      margin-bottom: 40px;
 
-      &:hover{
-        .hide_block{
-          display: flex;
-          z-index: 1000;
-        }
-      }
-
-      .meta_info{
+      .meta_info {
         display: flex;
         justify-content: space-between;
         width: 100%;
-        //padding: 5px;
 
-        .top{
-          width: 60%;
+        .top {
+          width: 50%;
           display: flex;
           align-items: center;
           justify-content: center;
 
-          i{
+          i {
             color: $color-base;
             margin-right: 5px;
           }
-          span{
+          span {
             text-transform: uppercase;
             font-size: 20px;
             color: $color-base;
@@ -153,9 +143,9 @@
           }
         }
 
-        .price{
+        .price {
           background-color: $color-base;
-          width: 40%;
+          width: 50%;
           text-align: center;
           border-top-right-radius: .3em;
           border-top-left-radius: .3em;
@@ -164,71 +154,98 @@
         }
       }
 
-      .content_card{
+      .flip_card {
+        position: relative;
         width: 100%;
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
+        height: 100%;
+        //border-radius: .3em;
+        transform-style: preserve-3d;
+        transition: all 0.8s ease;
 
-        &:hover{
-          border: 2px solid $color-base;
+        &:hover {
+          transform: rotateY(180deg);
         }
 
-        img{
+        .front_card {
+          position: absolute;
+          top: 0;
+          left: 0;
           width: 100%;
-        }
-
-        .breed{
-          margin-top: 10px;
-          color: $color-base;
-          font-size: 18px;
-          min-height: 70px;
-          max-height: 100px;
+          //height: 100%;
+          border: 1px solid $color-grey;
+          //border-radius: .3em;
+          backface-visibility: hidden;
           overflow: hidden;
-        }
+          //text-align: center;
 
-        .fields{
-          display: flex;
-          margin-left: 30px;
-          flex-direction: column;
+          img {
+            width: 100%;
+            max-height: 140px;
+          }
 
-          div{
-            display: flex;
-            align-items: flex-start;
-            margin-bottom: 5px;
-            i{
-              margin-right: 10px;
-              font-size: 20px;
-              color: $color-base;
+          .breed {
+            margin-top: 20px;
+            min-height: 70px;
+            max-height: 100px;
+            //overflow: hidden;
+            color: $color-base;
+            font-size: 20px;
+            text-align: center;
+          }
+
+          .fields {
+
+            padding: 10px;
+            text-align: center;
+
+            div {
+              //display: flex;
+              //align-items: flex-start;
+              margin-bottom: 5px;
+
+              i {
+                margin-right: 10px;
+                font-size: 18px;
+                color: $color-base;
+              }
             }
           }
         }
 
-        .hide_block{
+        .back_card {
           padding: 10px;
+          position: absolute;
+          top: 0;
+          left: 0;
+          width: 100%;
+          //height: 100%;
+          backface-visibility: hidden;
+          overflow: hidden;
+          border: 1px solid $color-base;
+          background: $color-item;
+          color: $color-grey;
+          transform: rotateY(180deg);
           display: flex;
           flex-direction: column;
-          align-items: center;
-          justify-content: center;
-          transition: all .5s;
+          @include shadow_block;
 
           .text{
-            max-height: 200px;
+            height: 330px;
             overflow: hidden;
           }
 
-          .link_more{
+          .link_more {
             width: 60%;
             display: flex;
             justify-content: center;
             align-items: center;
+            align-self: center;
             margin-top: 10px;
             height: 30px;
             background-color: $color-base;
             border-radius: .3em;
 
-            a{
+            a {
               display: flex;
               justify-content: space-around;
               align-items: center;
@@ -236,23 +253,23 @@
               height: 100%;
               color: $color-item;
 
-              &:hover{
+              &:hover {
                 text-decoration: none;
                 color: $color-link-active;
                 @include shadow_block;
 
               }
 
-              i{
+              i {
                 font-size: 18px;
               }
             }
 
-          }
         }
       }
-
     }
   }
+
+}
 
 }
