--- a/src/scss/mod_puppies.scss
+++ b/src/scss/mod_puppies.scss
@@ -172,15 +172,16 @@
           left: 0;
           width: 100%;
           //height: 100%;
-          border: 1px solid $color-grey;
+          border: 1px solid $color-base;
           //border-radius: .3em;
           backface-visibility: hidden;
+          height: 400px;
           overflow: hidden;
           //text-align: center;
 
           img {
             width: 100%;
-            max-height: 140px;
+            height: 140px;
           }
 
           .breed {
@@ -196,16 +197,15 @@
           .fields {
 
             padding: 10px;
-            text-align: center;
+            //text-align: center;
 
             div {
-              //display: flex;
-              //align-items: flex-start;
               margin-bottom: 5px;
 
               i {
                 margin-right: 10px;
-                font-size: 18px;
+                margin-left: 10px;
+                font-size: 16px;
                 color: $color-base;
               }
             }
@@ -219,6 +219,7 @@
           left: 0;
           width: 100%;
           //height: 100%;
+          height: 400px;
           backface-visibility: hidden;
           overflow: hidden;
           border: 1px solid $color-base;
